--- a/style.css
+++ b/style.css
@@ -1,1 +1,11 @@
 
+body{
+  background-color:#9381FF;
+  font-size:15px;
+  font-family:serif
+}
+
+head{
+  font-family:"Paris";
+  font-size:35px;
+}
