--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ h3{
 p{
   font-size:15px;
   font-family:"Tahoma";
-  color:plum;
+  color:#230903;
   text-align:center;
 }
 
@@ -71,7 +71,8 @@ a:hover{
 }
 
 img{
-  display:block;
+  display:flex;
+  float:right;
   margin:0 auto;
   width:200px;
   height:auto;
