--- a/style.css
+++ b/style.css
@@ -72,11 +72,12 @@ a:hover{
 }
 
 img{
-  display:inline;
+  display:block;
   margin:0 auto;
   width:200px;
   height:auto;
   overflow:hidden;
+  border-radius:20px;
 }
 
 .description{
@@ -86,8 +87,10 @@ img{
 
 .ingredients {
   border: 3px solid black;
+  background-color:#FFF0F5;
 }
 
 .directions {
   border: 3px solid black;
+  background-color:#FFF0F5;
 }
