--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ p{
 
 ul{
   list-style-type: none;
-  background-color:peachpuff;
+  background-color:#ff5d8f;
   text-align:center;
   padding:20px;
   width:70wv;
