--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 body{
-  background-image: url('pinkbackground.jpg'); /* Replace with your image path */
+  background-image: url('assets/pinkbackground.jpg'); /* Replace with your image path */
   background-repeat: no-repeat; /* Prevents image repetition */
   background-size: cover; /* Stretches image to cover the entire background */
   background-position: center; /* Centers the image */
@@ -46,7 +46,7 @@ h2{
 
 h3{
   font-size:20px;
-  font-family:"Georgia"
+  font-family:"Georgia";
   text-align:center;
 }
 
@@ -111,7 +111,7 @@ img{
 }
 
 #bakeryimg{
-  width:500px;
+  width:300px;
   height:auto;
   float:right;
   padding:10px;
