--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@ body{
   background-repeat: no-repeat; /* Prevents image repetition */
   background-size: cover; /* Stretches image to cover the entire background */
   background-position: center; /* Centers the image */
-  background-color:#9381FF;
   font-size:15px;
   font-family:serif;
   padding:20px;
@@ -39,13 +38,13 @@ head{
 }
 
 h2{
-  font-size:25px;
+  font-size:30px;
   font-family:"Georgia";
   text-align:center;
 }
 
 h3{
-  font-size:20px;
+  font-size:22px;
   font-family:"Georgia";
   text-align:center;
 }
@@ -59,11 +58,12 @@ p{
 }
 
 ul{
-  list-style-type: none;
   text-align:center;
   padding:20px;
   width:70wv;
   clear:both;
+  list-style-image: url('assets/pinkbackground.jpg');
+  list-style-type: circle;
 }
 
 a{
@@ -101,13 +101,13 @@ img{
 .ingredients {
   border: 3px solid black;
   background-color:#ffe5ec;
-  margin: 10px 20px;
+  margin: 5px;
 }
 
 .directions {
   border: 3px solid black;
   background-color:#ffe5ec;
-  margin:20px 10px;
+  margin: 5px;
 }
 
 #bakeryimg{
@@ -121,4 +121,8 @@ img{
 
 .navbar{
   background-color:#ff5d8f;
+}
+
+ol{
+  list-style-position: inside;
 }
